# med-ifk-predict-pacient

./: .flake8  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt
bot/: __init__.py  app_controller.py  app_model.py  event.py  events.py  handlers.py  user_model.py
mvc/: __init__.py  base_controller.py  events.py  pub_sub.py  publisher.py  subscriber.py
